fix: configuration fixes